objects/ssot__NetworkReferencedObject__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Network Reference Object Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__NetworkId__c</fullName>
        <label>Network</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReferencedObjectId__c</fullName>
        <label>Referenced Object</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761223519_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NetworkReferencedObject_NetworkId_ma_rel</label>
        <referenceTo>ssot__Network__dlm</referenceTo>
        <relationshipLabel>NetworkReferencedObject_NetworkId_ma_rel</relationshipLabel>
        <relationshipName>rel_1697761223519_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>